src/objects/Ref_Value__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BeiJing</fullName>
                </value>
                <value>
                    <fullName>ShangHai</fullName>
                </value>
                <value>
                    <fullName>DaLian</fullName>
                </value>
                <value>
                    <fullName>GuangZhou</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Active_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Effective__c</fullName>
        <label>Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ineffective__c</fullName>
        <label>Date Ineffective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eng_Delivery_Alternative__c</fullName>
        <description>For Action Type</description>
        <label>Eng Delivery Alternative</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zero Onsite</fullName>
                </value>
                <value>
                    <fullName>HP CE Onsite</fullName>
                </value>
                <value>
                    <fullName>Subcontractor Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gbu_L1__c</fullName>
        <label>Gbu L1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gbu_L2__c</fullName>
        <label>Gbu L2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gbu__c</fullName>
        <label>Gbu</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hpl__c</fullName>
        <label>Hpl</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pgu__c</fullName>
        <label>Pgu</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rc_Delivery_Alternative__c</fullName>
        <label>Rc Delivery Alternative</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Onsite CE</fullName>
                </value>
                <value>
                    <fullName>Courier Assist</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>Remote With Phone</fullName>
                </value>
                <value>
                    <fullName>Remote With Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Class_Seq_Key__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>Repair Class Seq Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resolution_Cd_Hw_Sw__c</fullName>
        <description>For Resolution</description>
        <label>Resolution Cd Hw Sw</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_Plant__c</fullName>
        <formula>Name + Stor_Location__c</formula>
        <label>S Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Flag__c</fullName>
        <label>Service Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Same Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <label>Service Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>30M</fullName>
                </value>
                <value>
                    <fullName>IMM</fullName>
                </value>
                <value>
                    <fullName>1HR</fullName>
                </value>
                <value>
                    <fullName>2HR</fullName>
                </value>
                <value>
                    <fullName>3HR</fullName>
                </value>
                <value>
                    <fullName>4HR</fullName>
                </value>
                <value>
                    <fullName>5HR</fullName>
                </value>
                <value>
                    <fullName>6HR</fullName>
                </value>
                <value>
                    <fullName>7HR</fullName>
                </value>
                <value>
                    <fullName>8HR</fullName>
                </value>
                <value>
                    <fullName>9HR</fullName>
                </value>
                <value>
                    <fullName>10HR</fullName>
                </value>
                <value>
                    <fullName>11HR</fullName>
                </value>
                <value>
                    <fullName>12HR</fullName>
                </value>
                <value>
                    <fullName>13HR</fullName>
                </value>
                <value>
                    <fullName>14HR</fullName>
                </value>
                <value>
                    <fullName>15HR</fullName>
                </value>
                <value>
                    <fullName>16HR</fullName>
                </value>
                <value>
                    <fullName>17HR</fullName>
                </value>
                <value>
                    <fullName>18HR</fullName>
                </value>
                <value>
                    <fullName>19HR</fullName>
                </value>
                <value>
                    <fullName>20HR</fullName>
                </value>
                <value>
                    <fullName>21HR</fullName>
                </value>
                <value>
                    <fullName>22HR</fullName>
                </value>
                <value>
                    <fullName>23HR</fullName>
                </value>
                <value>
                    <fullName>24HR</fullName>
                </value>
                <value>
                    <fullName>NBD</fullName>
                </value>
                <value>
                    <fullName>NCD</fullName>
                </value>
                <value>
                    <fullName>2CD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>RESPONSE_TIME</fullName>
                </value>
                <value>
                    <fullName>REPAIR_TIME</fullName>
                </value>
                <value>
                    <fullName>RESTORATION_TIME</fullName>
                </value>
                <value>
                    <fullName>SCH_RESPONSE_TIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Business__c</fullName>
        <label>Services Business</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spl_Dlv__c</fullName>
        <label>Spl Dlv</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spl_Name__c</fullName>
        <label>Spl Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spl__c</fullName>
        <label>Spl</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srvc_Cat__c</fullName>
        <description>For Resolution</description>
        <label>Srvc Cat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Corrective</fullName>
                </value>
                <value>
                    <fullName>Corrective</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stor_Location__c</fullName>
        <label>Stor. Location</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Gbu__c</fullName>
        <label>Sub Gbu</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <label>Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Not-Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workorder_Type_Srvc_Cat__c</fullName>
        <description>For Work Order Type</description>
        <label>Workorder Type Srvc Cat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please specify</fullName>
                    <default>true</default>
                    <label>Please specify</label>
                </value>
                <value>
                    <fullName>Corrective</fullName>
                </value>
                <value>
                    <fullName>Non-Corrective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reference Value</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Comments__c</columns>
        <columns>Date_Added__c</columns>
        <columns>Date_Effective__c</columns>
        <columns>Date_Ineffective__c</columns>
        <columns>Description__c</columns>
        <columns>Eng_Delivery_Alternative__c</columns>
        <columns>Gbu__c</columns>
        <columns>Hpl__c</columns>
        <columns>Pgu__c</columns>
        <columns>Priority__c</columns>
        <columns>Service_Flag__c</columns>
        <columns>Spl__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Lily</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Srvc_Cat__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ref_Value__c.Repair_Class</value>
        </filters>
        <label>Lily</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>OPS</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Action_Type</fullName>
        <active>true</active>
        <label>Action Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_center</fullName>
        <active>true</active>
        <label>Business center</label>
    </recordTypes>
    <recordTypes>
        <fullName>HPL_Type</fullName>
        <active>true</active>
        <label>HPL Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Odm_Type</fullName>
        <active>true</active>
        <label>Odm Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repair_Class</fullName>
        <active>true</active>
        <label>Repair Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subcase_Delay_Code</fullName>
        <active>true</active>
        <label>Subcase Delay Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subcase_Quality_Code</fullName>
        <active>true</active>
        <label>Subcase Quality Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subcase_Resolution</fullName>
        <active>true</active>
        <label>Subcase Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Order_Type</fullName>
        <active>true</active>
        <label>Work Order Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>